src/objects/Competitor_Color__c.object
<CustomObject>
    <description>All colors with competitor, code and description.</description>
    <fields>
        <fullName>Color_Brand__c</fullName>
        <description>Brand name of competitor color</description>
        <label>Color Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Hex__c</fullName>
        <label>Color Hex</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Name__c</fullName>
        <label>Color Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_code__c</fullName>
        <label>Color Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_picture__c</fullName>
        <formula>IMAGE( &quot;http://www.colorhexa.com/&quot; &amp;  Color_Hex__c  &amp; &quot;.png&quot;,  Color_code__c  ,25, 25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walkway</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitor Color</relationshipLabel>
        <relationshipName>Competitor_Color</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Fandeck name or description of source</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Competitor Color</label>
    <nameField>
        <label>Color Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Color</pluralLabel>
    <recordTypes>
        <fullName>Color_and_base</fullName>
        <active>true</active>
        <label>Color And Base</label>
    </recordTypes>
    <recordTypes>
        <fullName>Color_only</fullName>
        <active>true</active>
        <label>Color Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>